<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kf_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="danilo.rameschandra@tecnico.ulisboa.pt">danilo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>geometry_msgs</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
